@@ -11,6 +11,8 @@ Also the Migration Guide (Japanese) might be informative:
   https://inter-mediator.info/ja/for-developers/migration.html
 
 Ver.10 (In Development)
+- The _im_seq pesudo field appears in context. It shows the sequential number in the context records from 1.
+- The _im_count pesudo field appears in context. It shows how many records in the context.
 
 Ver.9 (January 31, 2022)
 - [Important] Native upser authentication and LDAP direct supporting was dropped. If you want to LDAP server
